--- a/MapAndVideoPlay/MapAndVideoPlay/Info.plist
+++ b/MapAndVideoPlay/MapAndVideoPlay/Info.plist
@@ -60,5 +60,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>$(PRODUCT_NAME) uses the camera to record video.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>$(PRODUCT_NAME) uses the microphone to record audio when making a video.</string>
 </dict>
 </plist>
