--- a/.gitignore
+++ b/.gitignore
@@ -131,7 +131,7 @@ Dependencies/
 ### SwiftPackageManager ###
 Packages
 xcuserdata
-*.xcodeproj
+###*.xcodeproj###
 
 
 ### SwiftPM ###
@@ -181,11 +181,11 @@ Temporary Items
 ## compatibility with Xcode 3 and earlier (ignoring not required starting Xcode 4)
 
 ## Xcode Patch
-*.xcodeproj/*
-!*.xcodeproj/project.pbxproj
-!*.xcodeproj/xcshareddata/
-!*.xcworkspace/contents.xcworkspacedata
-/*.gcno
+###*.xcodeproj/*
+###!*.xcodeproj/project.pbxproj###
+###!*.xcodeproj/xcshareddata/
+###!*.xcworkspace/contents.xcworkspacedata
+###/*.gcno
 
 ### Xcode Patch ###
 **/xcshareddata/WorkspaceSettings.xcsettings
